@startuml
title Diagrama de paquetes - Arquitectura Laravel MVC

skinparam shadowing false
skinparam packageStyle rectangle
skinparam linetype ortho

package "Presentacion" <<Layer>> {
  package "resources/views" {
    class "layouts/app.blade.php" <<boundary>>
    class "dashboard.blade.php" <<boundary>>
    class "pacientes/*.blade.php" <<boundary>>
    class "citas/*.blade.php" <<boundary>>
    class "expedientes/*.blade.php" <<boundary>>
    class "dentistas/*.blade.php" <<boundary>>
    class "tratamientos/*.blade.php" <<boundary>>
    class "recetas/*.blade.php" <<boundary>>
    class "inventario/*.blade.php" <<boundary>>
    class "configuracion/index.blade.php" <<boundary>>
  }
}

package "Entrada HTTP" <<Layer>> {
  class "routes/web.php" <<router>>
  class "Middleware Auth" <<middleware>>
  class "Middleware CSRF" <<middleware>>
}

package "Aplicacion" <<Layer>> {
  package "app/Http/Controllers" {
    class DashboardController <<control>>
    class AuthController <<control>>
    class CitaController <<control>>
    class ExpedienteController <<control>>
    class PacienteController <<control>>
    class DentistaController <<control>>
    class TratamientoController <<control>>
    class RecetaController <<control>>
    class InventarioController <<control>>
  }
}

package "Dominio" <<Layer>> {
  package "app/Models" {
    class User <<entity>>
    class Paciente <<entity>>
    class Dentista <<entity>>
    class Cita <<entity>>
    class Expediente <<entity>>
    class ExpedienteDocumento <<entity>>
    class Tratamiento <<entity>>
    class Receta <<entity>>
    class Inventario <<entity>>
  }
}

package "Persistencia" <<Layer>> {
  database "PostgreSQL" <<database>> as DB
  class "database/migrations" <<schema>>
  class "database/seeders" <<seed>>
  class "database/factories" <<factory>>
}

"resources/views" ..> "routes/web.php" : formularios / enlaces
"routes/web.php" ..> "Middleware Auth" : grupo protegido
"routes/web.php" ..> "Middleware CSRF" : POST/PUT/DELETE
"routes/web.php" ..> "app/Http/Controllers" : despacha peticiones
"app/Http/Controllers" ..> "app/Models" : usa Eloquent
"app/Models" ..> DB : consultas ORM
"database/migrations" ..> DB : define esquema
"database/seeders" ..> "database/factories" : genera datos
"database/seeders" ..> DB : inserta registros

@enduml
